# ScreenPro2

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  environment.yml  pyproject.toml  setup.py  test.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: question-template.md
.github/workflows/: python-package.yml  python-publish.yml
demo/step1_process_fastq_files/: example_crispri_v2_sample.fastq
docs/: environment.yaml  environment.yml  requirements.txt
docs/source/: PhenoScore.rst  assays.md  assays.rst  conf.py  history.rst  index.rst  load.md  load.rst  ngs.md  ngs.rst  phenotype.md  phenotype.rst  plotting.rst  references.bib  references.md  references.rst  screenpro.rst  usage.rst  utils.rst  visualize.md
screenpro/: __init__.py  __main__.py  __version__.py  assays.py  crisprscreens.py  dashboard.py  datasets.py  load.py  main.py  ngs.py  phenoScore.py  phenoStats.py  phenoscore.py  phenostat.py  plots.py  plotting.py  preprocessing.py  pyproject.toml  utils.py
screenpro/assays/: __init__.py
screenpro/dashboard/: __init__.py
screenpro/ngs/: __init__.py  cas12.py  cas9.py  counter.py  utils.py
screenpro/phenoscore/: __init__.py  _annotate.py  annotate.py  delta.py  deseq.py  evaluate.py  phenostat.py
screenpro/plotting/: __init__.py  _rank.py  _utils.py  pheno_plots.py  qc_plots.py  utils.py  volcano.py
screenpro/tests/: test_fastq2count.py  test_phenoScore.py  test_phenoscore.py
screenpro/visualize/: __init__.py  dashboard.py  qc_plots.py  rank.py  utils.py
tests/: test_fastq2count.py  test_phenoscore.py
