[tool.poetry]
name = "ScreenPro2"
version = "0.5.0"
description = "Flexible analysis of high-content CRISPR screening"
authors = [
	"Abe Arab <abea@arcinstitute.org>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ArcInstitute/ScreenPro2"
repository = "https://github.com/ArcInstitute/ScreenPro2"
keywords = ["CRISPR", "screening", "bioinformatics"]
packages = [
	{ include = "screenpro" },
	{ include = "pyproject.toml" },
]
dynamic = ["version"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.scripts]
screenpro = "screenpro.main:main"

[tool.poetry.group.test.dependencies]
pytest = "*"
tomli = "*"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"