[build-system]
requires = ["setuptools", "wheel", "numpy"]

[project]
name = "ScreenPro2"
readme = "README.rst"
license= { file = "LICENSE" }

[project.urls]
documentation = 'https://screenpro2.rtfd.io/'
source = 'https://github.com/abearab/ScreenPro2'
tracker = 'https://github.com/abearab/ScreenPro2/issues'